[package]
name = "reddit-place-2022"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"

[[bin]]
name = "checker"

[[bin]]
name = "order"

[[bin]]
name = "sort"

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
chrono = "0.4"
image = "0.24"
